# Tiny_RPC

./: CMakeLists.txt  autobuild.sh
example/: Makefile
example/callee/: Makefile  cmake_install.cmake  friendservice.cc  userservice.cc
example/caller/: Makefile  callfriendservice.cc  calluserservice.cc
src/: CMakeLists.txt  Makefile  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpclogger.cc  rpcprovider.cc  zookeeperutil.cc
src/include/: lockqueue.h  mprpcapplication.h  mprpcconfig.h  rpclogger.h  rpcprovider.h
src/muduo/: InetAddress.cc  Logger.cc  TcpConnection.cc  TcpServer.cc  Timestamp.cc
src/muduo/include/: Buffer.h  Timestamp.h
test/protobuf/: test.proto
